# internal/delivery/http/requests/user_requests.go
@@ -1,0 +1,22 @@
+package http_requests
+
+// swagger:parameters createUser
+type createUserParams struct {
+    // in: body
+    // required: true
+    Body struct {
+        FirstName string `json:"first_name"`
+		MiddleName string `json:"middle_name,omitempty"`
+        LastName  string `json:"last_name"`
+        Email     string `json:"email"`
+        Password  string `json:"password"`
+    }
+}
+
+type CreateUserRequest struct {
+    FirstName  string `json:"first_name"`
+    MiddleName string `json:"middle_name,omitempty"`
+    LastName   string `json:"last_name"`
+    Email      string `json:"email"`
+    Password   string `json:"password"`
+}
