# internal/delivery/http/responses/user_responses.go
@@ -1,0 +1,23 @@
+package handlers
+
+// swagger:response createUserResponse
+type createUserResponse struct {
+    // in: body
+    Body struct {
+        Message string `json:"message"`
+    }
+}
+
+// swagger:response getUserResponse
+type getUserResponse struct {
+    // in: body
+    Body string `json:"body"`
+}
+
+// swagger:response errorResponse
+type errorResponse struct {
+    // in: body
+    Body struct {
+        Error string `json:"error"`
+    }
+}
